--- a/Project_MAL/OEF_Project_MAL/Project_MAL_WPF/MangaInfo_Window.xaml
+++ b/Project_MAL/OEF_Project_MAL/Project_MAL_WPF/MangaInfo_Window.xaml
@@ -13,7 +13,7 @@
         TextOptions.TextRenderingMode="Auto"        
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
-        Title="MangaInfo_Window" Height="550" Width="950">
+        Title="MangaInfo_Window" Height="550" Width="950" Loaded="Window_Loaded">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
@@ -61,7 +61,7 @@
         <Button
             Style="{StaticResource MaterialDesignRaisedButton}"
              Grid.Row="3" Grid.Column="1" Margin="16,16,16,10" x:Name="btnAddCharacter"
-            ToolTip="Resource name: MaterialDesignRaisedButton" Click="btnAddCharacter_Click">
+            ToolTip="Resource name: MaterialDesignRaisedButton" Click="BtnAddCharacter_Click">
             _Add Character
         </Button>
         <Button
@@ -73,7 +73,7 @@
         <Button
             Style="{StaticResource MaterialDesignRaisedButton}"
              Grid.Row="3" Grid.Column="3" Margin="16,16,16,10" x:Name="btnExtraInfo"
-            ToolTip="Resource name: MaterialDesignRaisedButton" Click="btnExtraInfo_Click">
+            ToolTip="Resource name: MaterialDesignRaisedButton" Click="BtnExtraInfo_Click">
             _Extra Info
         </Button>
 
