--- a/Project_MAL/OEF_Project_MAL/Project_MAL_WPF/AddCharacter_Window.xaml
+++ b/Project_MAL/OEF_Project_MAL/Project_MAL_WPF/AddCharacter_Window.xaml
@@ -13,7 +13,7 @@
         TextOptions.TextRenderingMode="Auto"        
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}"
-        Title="AddCharacter_Window" Height="450" Width="400">
+        Title="AddCharacter_Window" Height="450" Width="400" Loaded="Window_Loaded">
     <Grid>
         <GroupBox Grid.Column="1"
             Margin="16,10,16,16">
@@ -72,7 +72,7 @@
                 <Button
                     Style="{StaticResource MaterialDesignRaisedButton}"
                     Width="140" x:Name="btnAddCharacter"
-                    ToolTip="Resource name: MaterialDesignRaisedButton" Margin="0,10,0,0">
+                    ToolTip="Resource name: MaterialDesignRaisedButton" Margin="0,10,0,0" Click="BtnAddCharacter_Click">
                     _Add Character
                 </Button>
             </StackPanel>
